gccida/c0/can_combine_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1420:13: error: expected identifier or '('
 struct set = 0LL; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1434:13: error: expected identifier or '('
 struct set = ( rtx)insn[2]; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1452:7: error: expected expression
if (  struct set ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1454:13: error: expected identifier or '('
 struct set = elt; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1460:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
i3pat = ( rtx)i3[2]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1495:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)seta[1]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1551:52: error: use of undeclared identifier 'machine_mode'
&& !ix86_hard_regno_mode_ok( dest->fld[0].rtint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)) 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1551:67: error: expected expression
&& !ix86_hard_regno_mode_ok( dest->fld[0].rtint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)) 
                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1553:51: error: use of undeclared identifier 'machine_mode'
&& !ix86_hard_regno_mode_ok( src->fld[0].rtint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)src))) ) 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/combine.c:1553:66: error: expected expression
&& !ix86_hard_regno_mode_ok( src->fld[0].rtint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)src))) ) 
                                                                 ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/can_combine_p/src/obj/combine.o] Error 1
